# sherpa-tax-rule-studio

./: .env.example  .gitignore  1065_core_reconcile_log.md  1065_core_source_brief.md  1065_se_spec.json  4797_TY2025_v1_spec.json  4797_spec.json  8825_TY2025_v2_spec.json  CHANGE_REGISTER.md  CLAUDE.md  DECISIONS.md  MEMORY.md  STATUS.md  WORK_ORDERS.md  al_form40_source_brief.md  boundary_diag_source_brief.md  build.sh  check_1040x_integrity.py  check_1065_se_integrity.py  check_1099g_integrity.py  check_1116_integrity.py  check_2210_integrity.py  check_2441_integrity.py  check_4562_section179_integrity.py  check_4797_integrity.py  check_5695_integrity.py  check_6251_integrity.py  check_6252_integrity.py  check_7217_integrity.py  check_8283_integrity.py  check_8606_integrity.py  check_8615_integrity.py  check_8824_integrity.py  check_8829_integrity.py  check_8863_integrity.py  check_8880_integrity.py  check_8889_integrity.py  check_8911_integrity.py  check_8960_integrity.py  check_8962_integrity.py  (+57 more)
.claude/: settings.local.json
client/: index.html  package-lock.json  package.json  vite.config.ts
scratchpad/: seed_8825_renumber.py  validate_1040v_es.py  validate_1041.py  validate_1041_fa.py  validate_1041_k1.py  validate_1120.py  validate_1120s_full_renumber.py  validate_2553.py  validate_2848.py  validate_3115.py  validate_4684.py  validate_4868.py  validate_4952.py  validate_5227.py  validate_6198_renumber.py  validate_709.py  validate_8283_entity.py  validate_8379.py  validate_8814.py  validate_8825_renumber.py  validate_8832.py  validate_8839.py  validate_8888.py  (+9 more)
(+181 files in other folders)
